# waycore-knowledge

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SOURCES.md  pyproject.toml
.github/workflows/: build.yml  validate-pr.yml
scripts/: build_index.py  generate_manifest.py  requirements.txt  verify_index.py
scripts/parsers/: __init__.py  json_parser.py  pdf_parser.py  plant_parser.py
sources/plants/: USDA_Plants_Sample.json
tests/: __init__.py  test_parsers.py  test_search.py
