[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waycore-rag-knowledge"
version = "1.0.0"
description = "Open-source survival & outdoor knowledge base for AI-powered field devices"
readme = "README.md"
license = {text = "CC0-1.0"}
requires-python = ">=3.10"
authors = [
    {name = "Waycore", email = "contact@waycore.dev"}
]
keywords = [
    "survival",
    "outdoor",
    "rag",
    "knowledge-base",
    "embeddings",
    "semantic-search",
    "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pymupdf>=1.24.0",
    "sentence-transformers>=2.2.0",
    "hnswlib>=0.8.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/waycore/waycore-rag-knowledge"
Documentation = "https://github.com/waycore/waycore-rag-knowledge#readme"
Repository = "https://github.com/waycore/waycore-rag-knowledge.git"
Issues = "https://github.com/waycore/waycore-rag-knowledge/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

